# line2d_ros

./: .gitignore  README.md
afm/launch/: afm.launch
afm/scripts/: ros_test.py
afm/scripts/experiments/: afm_atrous.yaml
afm/scripts/test/log/: latest
hawp/: CMakeLists.txt  package.xml
hawp/launch/: hawp.launch
hawp/msg/: lines2d.msg
hawp/src/: predict.py  ros_predict.py
hawp/src/config-files/: hawp.yaml
hawp/src/parsing/: detector.py
hawp/src/parsing/config/: defaults.py
hawp/src/parsing/dataset/: build.py  transforms.py
ulsd/: CMakeLists.txt  package.xml
ulsd/launch/: ulsd.launch
ulsd/src/: test.py  train.py  ulsd_node.py
ulsd/src/config/: cfg.py  pinhole.yaml
ulsd/src/dataset/: json2npz.py  json2npz_gt.py
ulsd/src/metric/: eval_mAPJ.py  eval_sAP.py
ulsd/src/network/: dataset.py
ulsd/src/util/: augment.py  camera.py
